fixed issue with explorer on safari / webkit

--- a/frontend/src/main/css/interaction-panel.sass
+++ b/frontend/src/main/css/interaction-panel.sass
@@ -14,7 +14,8 @@
   flex-grow: 1
   overflow: hidden
   background: url('/assets/transparent.svg')
+  display: flex
+  align-items: stretch
 
   canvas
     width: 100%
-    height: 100%
